Xbanner 3 in a row alignent fix

--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -15,6 +15,10 @@
     .lzd-act-voucher-list-scroll-daraz .flex-grid-scroll{
       height: 60vw !important;
     }
+/*   Xbanner 3 in a row alignent fix for app   */
+    .responsive-box.daraz .flex-grid-col2 .flex-item, .responsive-box.daraz .flex-grid-col3 .flex-item, .responsive-box.daraz .flex-grid-col4 .flex-item{
+      padding-left: 0% !important;
+    }
   }
   .hwc-counter .sign::after {
     color: #fff !important;
